# bible-rag-chatbot

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml  render.yaml  requirements.txt  supabase_conversations_setup.sql  supabase_fix_dimension.sql  supabase_setup.sql
app/: config.py  main.py
app/langgraph/: graph.py
app/models/: schemas.py
app/routers/: chat.py
app/scripts/: ingest_bible.py
app/services/: conversation_service.py  rag_service.py
docs/: mobile-responsive-checklist.md
frontend/: .gitignore  comprehensive-test-report.md  design-tokens.json  fix-summary.md  mobile-test-report.md  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/[id]/: page.tsx
frontend/components/: BibleMention.tsx  Chat.tsx  ChatInput.tsx  ConversationList.tsx  Message.tsx  SuggestionCards.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  bibleBooks.ts
frontend/tests/: README.md  responsive.spec.ts  visual.spec.ts
